# NeonFC

./: .gitignore  Dockerfile  Makefile  Pipfile  README.md  blue_team.json  config.json  config_lab.json  config_larc.json  config_real_life.json  enviroment.config  enviroment.dev.config  fields.json  foul_placements.json  foul_placements3v3.json  foul_placements5v5.json  live_plot_script.py  log.db  main.py  main_lab.py  main_real_life.py  pid_tuner.py  plot_script.py  requirements.txt  rsim_main.py  run_visualizers.py  test_comm.py  testar_campo.py  utils.py  uvf_plot.json  yellow_team.json
algorithims/: PID.py  __init__.py  astar.py  discretizedField.py  dynamicWindowApproach.py  dynamicWindowAproach.py
algorithms/: __init__.py  astar.py  discretizedField.py  dynamicWindowApproach.py
api/: Info_api.py  __init__.py  api_real_life.py  api_recv.py  info_api.py  new_api.py  parameters.py  send_thread.py  udp_sender.py
comm/: __init__.py  comm.py  rl_comm.py  rsimcomm.py
commons/: __init__.py  math.py  utils.py
controller/: Controller.py  PID.py  PID_control.py  __init__.py  noController.py  simple_LQR.py  uni_controller.py
entities/: Ball.py  Coach.py  Robot.py  __init__.py
fields/: 3v3_field.json  5v5_field.json  __init__.py  field.py  fields.py
live_plot/: __init__.py  circuit_plot.py  live_plot_script.py  live_plot_script_ang.py  logger.py  plot_astar_map.py  plot_circuit.ipynb  plot_djisktra.py  visualizer.py
match/: __init__.py  match.py  match_lab.py  match_real_life.py
notebooks/: potential_fields_analysis.ipynb
poetry-demo/: pyproject.toml
(+310 files in other folders)
