[tool.poetry]
name = "neonfc"
version = "0.1.0"
description = ""
authors = ["Raphael-AugustoG <giannattasio.raphael@aluno.ufabc.edu.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
scipy = "^1.13.1"
matplotlib = "^3.9.0"
pyqtgraph = "^0.13.7"
pyserial = "^3.5"
neonpathplanning = "^1.0.1"
pysslvision = "^1.0.1"
pyvsssreferee = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
